--- a/index.html
+++ b/index.html
@@ -81,6 +81,19 @@
                     <div class="col-md-9">
                         <h2>最近更新文章</h2>
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2024-10-07">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2024-10-7-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/d21208fec1e7d0709067a1f22cc3ab5b.webp" alt="「10月7日」最高速度23M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2024-10-7-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「10月7日」最高速度23M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了日本、欧洲、美国、韩国、新加坡、香港、加拿大等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2024-10-06">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2024-10-6-free-v2ray.htm" class="xcblog-blog-url">
@@ -328,19 +341,6 @@
                                     <p>这一次的节点更新覆盖了香港、美国、欧洲、新加坡、日本、加拿大、韩国等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2024-09-17">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2024-9-17-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="「9月17日」最高速度21.8M/S，2024年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2024-9-17-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「9月17日」最高速度21.8M/S，2024年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了日本、韩国、美国、加拿大、新加坡、香港、欧洲等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                                                     </div>
                     </div>
                     <div class="col-md-3">
@@ -350,15 +350,15 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-8-26-free-v2ray.htm" title="「8月26日」最高速度19.1M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月26日」最高速度19.1M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-22-free-v2ray-subscribe.htm" title="「9月22日」最高速度19.1M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「9月22日」最高速度19.1M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-8-node-share.htm" title="「9月8日」最高速度21.2M/S，2024年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接">「9月8日」最高速度21.2M/S，2024年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-13-free-subscribe-node.htm" title="「9月13日」最高速度22M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「9月13日」最高速度22M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-31-free-v2ray-subscribe.htm" title="「8月31日」最高速度21.6M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月31日」最高速度21.6M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-2-node-share-links.htm" title="「9月2日」最高速度20.6M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「9月2日」最高速度20.6M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-2-free-node-subscribe.htm" title="「10月2日」最高速度20.6M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「10月2日」最高速度20.6M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-9-free-v2ray.htm" title="「9月9日」最高速度23M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「9月9日」最高速度23M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-25-free-node-subscribe-links.htm" title="「8月25日」最高速度20.5M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「8月25日」最高速度20.5M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-11-free-v2ray-subscribe.htm" title="「9月11日」最高速度22.6M/S，2024年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「9月11日」最高速度22.6M/S，2024年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-30-free-v2ray-subscribe.htm" title="「9月30日」最高速度22.3M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「9月30日」最高速度22.3M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-18-free-node-subscribe.htm" title="「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-6-free-v2ray.htm" title="「9月6日」最高速度22.6M/S，2024年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「9月6日」最高速度22.6M/S，2024年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-21-free-v2ray-subscribe.htm" title="「8月21日」最高速度20.3M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月21日」最高速度20.3M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-7-node-share-links.htm" title="「9月7日」最高速度22.8M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「9月7日」最高速度22.8M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-23-node-share-links.htm" title="「9月23日」最高速度18.3M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接">「9月23日」最高速度18.3M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-19-free-node-subscribe-links.htm" title="「9月19日」最高速度22.7M/S，2024年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接">「9月19日」最高速度22.7M/S，2024年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-9-20-free-v2ray-subscribe.htm" title="「9月20日」最高速度18.8M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「9月20日」最高速度18.8M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
@@ -371,7 +371,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
+                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
